--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="headermain">
 
         <div class="title-section">
-            <h1  class="main-page-title">Destinee &Harrison Chappell</h1>
+            <h1  class="main-page-title">Destinee &<br>  Harrison</h1>
         </div>
 
 
