--- a/ceremonyPage.html
+++ b/ceremonyPage.html
@@ -6,9 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robbin Harrison's Heart Ceremony</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleCeremony.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">       
 </head>
 <body id="ceremony">
+
+    <header class="inverted-title">
+        <h1 id="header-ceremony" >Destinee & Harrison</h1>
+    </header>
+
+
+<div id="body-text">
+
+    <h2 id="cere-title">The Ceremony</h2>
+
+
+    <p id="the-main-date">NOVEMBER 11th 2022</p>
+
+    <div id="the-info">
+
+        <p class="main-text" >We would love to have you join us <em>virtually</em> for the <br>wedding ceremony by <a class="click-style"><strong>clicking here</strong></a>.</p>
+
+        <p class="main-text" >If you've been invited to the private <em>in-person</em> ceremony <br>you will receive your invitation <em>in the mail</em> by <strong>July 15th</strong>.<br><a class="click-style">Please RSVP here</a>.</p>
+
+        <p class="main-text" >If you have any questions<br>please email Kathy Chappell at<br><a class="click-style">harryandpeyt@gmail.com</a>.</p>
+
+        
+
+    </div>
+
+</div>
+
+
     
 </body>
 </html>
