--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
 <body id="index">
 
     <header class="headermain">
+        <img id="ham-menu" src="images/icons8-menu-50.png" />
+
+    <aside id="mini-dropdown">
+        <a id="mini-close"><img src="images/back-right-arrow-icon.png" id="exit-mini"/></a>
+
+        <div id="minilist">
+            <p class="mini-items"><a href="ceremonyPage.html" class="link-list" >Ceremony/<br>RSVP</a></p>
+            <p class="mini-items" ><a href="contact.html" class="link-list">Registry</a></p>
+            <p class="mini-items" ><a href="contact.html" class="link-list">Wedding Party</a></p>
+            <p class="mini-items" ><a href="contact.html" class="link-list">FAQs</a></p>
+        </div>
+    </aside>
+
 
         <div class="title-section">
             <h1  class="main-page-title">Destinee &<br>  Harrison</h1>
         </div>
 
+        
 
         <nav class="flex-list">
             <a class="nav-list-items-links" href="ceremonyPage.html"
@@ -96,6 +110,7 @@
 
 
     </div>
+    <p class="main-text" id="questions">If you have any questions please email Kathy Chappell at <a href="mailto: harryandpeyt@gmail.com" class="click-style" id="email-signoff">harryandpeyt@gmail.com</a>.</p>
     <script src="script.js"></script>
 </body>
 </html>
