--- a/registry.html
+++ b/registry.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robbin Harrison's Heart Ceremony</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="registryStyle.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet"> 
+
 </head>
 <body id="registry">
+
+    <a href="index.html" ><img src="images/back-left-arrow-icon.png" alt="Back button arrow" id="backimage"></a>
+
+    <h1>Webpage still in Progress!</h1>
     
 </body>
 </html>
