--- a/ceremonyPage.html
+++ b/ceremonyPage.html
@@ -36,7 +36,7 @@
 
         <button><a href="https://zoom.us/join" target="_blank" id="buttonlink">Watch us <br>get married!</a></button>
 
-        <p class="main-text" id="rsvp-section">If you've been invited to the private <em>in-person ceremony </em>you will receive your invitation <em>in the mail</em> by <strong>July 15th</strong>. If you haven't now received a physical invitation, please enjoy virtually by clicking the button above.<br><br><a class="click-style">Please RSVP here</a>.</p>
+        <p class="main-text" id="rsvp-section">If you've been invited to the private <em>in-person ceremony </em>you will receive your invitation <em>in the mail</em> by <strong>July 15th</strong>. <br><br>If you haven't now received a physical invitation, please enjoy virtually by clicking the button above.<br><br><a class="click-style">Please RSVP here</a>.</p>
 
 
     </div>
