--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <div id="minilist">
             <p class="mini-items"><a href="ceremonyPage.html" class="link-list" >Ceremony/<br>RSVP</a></p>
-            <p class="mini-items" ><a href="contact.html" class="link-list">Registry</a></p>
-            <p class="mini-items" ><a href="contact.html" class="link-list">Wedding Party</a></p>
-            <p class="mini-items" ><a href="contact.html" class="link-list">FAQs</a></p>
+            <p class="mini-items" ><a href="registry.html" class="link-list">Registry</a></p>
+            <p class="mini-items" ><a href="wedParty.html" class="link-list">Wedding Party</a></p>
+            <p class="mini-items" ><a href="FAQS.html" class="link-list">FAQs</a></p>
         </div>
     </aside>
 
