--- a/registry.html
+++ b/registry.html
@@ -28,7 +28,7 @@
     
     <h2 id="registry-title">Registry</h2>
 
-    <p class="description-info">Your presence is our present, <em>buuuut</em><br>in case you'd like to help us prepare for our life together here are some...</p>
+    <p class="description-info">Your presence is our present (via zoom or in-person), <em>buuuut</em><br>in case you'd like to help us prepare for our life together here are some...</p>
 
     <h2 class="support-gift">Ways to Support Us</h2>
 
@@ -173,7 +173,7 @@
             
 
             <div class="title-option-box">
-                <a><h3 class="option-title" id="cash-title">Cash</h3></a>
+                <a><h3 class="option-title" id="cash-title">Cash Donation</h3></a>
             </div>
             <div>
                 <img id="cash-image" class="gif-image" src="https://media.giphy.com/media/ekBL7F6GgOaxsPKkIU/giphy.gif" alt="Will Smith and Carlton Banks smiling as their eyes change to dollar signs.">
