--- a/FAQS.html
+++ b/FAQS.html
@@ -33,7 +33,7 @@
 
             <h3 class="header-questions">Where/When is the wedding?</h3>
             
-                <p class="para-answers">We're getting married November 11th 2022 in Fairfield, CA.</p>
+                <p class="para-answers">We're getting married November 11th 2022 at 4pm in Fairfield, CA.</p>
 
             <h3 class="header-questions">Where are you going on your honeymoon?</h3>
             
