--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bakbak+One&family=Bungee+Inline&family=Georama:wght@100&family=Lato&family=Merriweather:wght@300&family=Monoton&family=Nunito:wght@200&family=Playfair+Display&family=Press+Start+2P&family=Raleway:wght@300&family=Roboto+Condensed&family=Roboto+Mono&family=Roboto+Slab&family=Scheherazade+New&family=Source+Sans+Pro&family=VT323&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Quicksand:wght@500&family=Signika+Negative&family=Work+Sans&display=swap" rel="stylesheet">
 
 
     <title>Robbin Harrison's Heart</title>
@@ -69,7 +69,7 @@
         
 
         <div class="fullimage">
-            <img src="images/image0.jpeg" alt="Harrison and Destinee smiling in white after engagement" class="heroimage">
+            <img src="images/engagementPhoto.jpeg" alt="Harrison and Destinee smiling in white after engagement" class="heroimage">
         </div>
 
         <div class="half-section">
