--- a/wedParty.html
+++ b/wedParty.html
@@ -32,70 +32,83 @@
 
                 <div class="photobox">
                     <img src="images/Jeffrey.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Jeffrey</h4>
+                    <p class="likely-award">...hoop with you at any time of the night in his full work uniform.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Isaiah.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Isaiah</h4>
+                    <p class="likely-award">...cheer you up by being unintentionally funny.</p>
 
                 </div>
 
                 <div class="photobox">
                     <img src="images/Ahnesti.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Ahnesti</h4>
+                    <p class="likely-award">...beat you up and then text you seconds after sayong, "turn on the Wii, I'm cooking dinner"</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Tatiana.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Tatiana</h4>
+                    <p class="likely-award">...stay at your house for a week and learn new dances with you.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Peyton.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Peyton</h4>
+                    <p class="likely-award">...suprise you with a gift you've been looking for but couldn't find anywhere.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Ziggy.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Ziggy</h4>
+                    <p class="likely-award">...make you laugh until your stomach hurts and your eyes water.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Denia.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Denia</h4>
+                    <p class="likely-award">...run around to mulitple grocery stores in your pajamas looking for the perfect dessert for a luaghter filled movie night.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Desire.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Desire</h4>
+                    <p class="likely-award">...get fired from cleaning your grandma's house with you because all you do is laugh and eat her snacks.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Marlon.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Marlon</h4>
+                    <p class="likely-award">...turn every car ride into a full concert, making you stay in the car until the song is over.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Micah.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Micah</h4>
+                    <p class="likely-award">...sing "The Lady in my Life" with you at any given moment.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Tsiyani.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Tsiyani</h4>
+                    <p class="likely-award">...cook food that feeds your soul and puts you to sleep.</p>
                 </div>
 
                 
 
                 <div class="photobox">
                     <img src="images/Cheyance.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Cheyance</h4>
+                    <p class="likely-award">...stay up til 2AM watching low budget Netflix movies with you.</p>
                 </div>
 
                 <div class="photobox">
                     <img src="images/Bailee.jpeg" alt="" class="person-image">
-                    <h4 class="img-name"></h4>
+                    <h4 class="img-name">Bailee</h4>
+                    <p class="likely-award">...take a fire nap with you and then stay up partying 'till the crack of dawn.</p>
                 </div>
 
                 
